adicionando o servico de deletar um step
