# gen/http/step/server/encode_decode.go
@@ -90,6 +90,40 @@ func DecodeAddRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Dec
 	}
 }
 
+// EncodeRemoveResponse returns an encoder for responses returned by the step
+// remove endpoint.
+func EncodeRemoveResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
+	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
+		w.WriteHeader(http.StatusNoContent)
+		return nil
+	}
+}
+
+// DecodeRemoveRequest returns a decoder for requests sent to the step remove
+// endpoint.
+func DecodeRemoveRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
+	return func(r *http.Request) (interface{}, error) {
+		var (
+			body RemoveRequestBody
+			err  error
+		)
+		err = decoder(r).Decode(&body)
+		if err != nil {
+			if err == io.EOF {
+				return nil, goa.MissingPayloadError()
+			}
+			return nil, goa.DecodePayloadError(err.Error())
+		}
+		err = ValidateRemoveRequestBody(&body)
+		if err != nil {
+			return nil, err
+		}
+		payload := NewRemovePayload(&body)
+
+		return payload, nil
+	}
+}
+
 // marshalStepviewsStoredStepViewToStoredStepResponseBody builds a value of
 // type *StoredStepResponseBody from a value of type *stepviews.StoredStepView.
 func marshalStepviewsStoredStepViewToStoredStepResponseBody(v *stepviews.StoredStepView) *StoredStepResponseBody {
