# gen/http/step/server/server.go
@@ -21,6 +21,7 @@ type Server struct {
 	Mounts []*MountPoint
 	List   http.Handler
 	Add    http.Handler
+	Remove http.Handler
 }
 
 // ErrorNamer is an interface implemented by generated error structs that
@@ -58,9 +59,11 @@ func New(
 		Mounts: []*MountPoint{
 			{"List", "GET", "/steps/{id}"},
 			{"Add", "POST", "/steps"},
+			{"Remove", "DELETE", "/steps"},
 		},
-		List: NewListHandler(e.List, mux, decoder, encoder, errhandler, formatter),
-		Add:  NewAddHandler(e.Add, mux, decoder, encoder, errhandler, formatter),
+		List:   NewListHandler(e.List, mux, decoder, encoder, errhandler, formatter),
+		Add:    NewAddHandler(e.Add, mux, decoder, encoder, errhandler, formatter),
+		Remove: NewRemoveHandler(e.Remove, mux, decoder, encoder, errhandler, formatter),
 	}
 }
 
@@ -71,12 +74,14 @@ func (s *Server) Service() string { return "step" }
 func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.List = m(s.List)
 	s.Add = m(s.Add)
+	s.Remove = m(s.Remove)
 }
 
 // Mount configures the mux to serve the step endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
 	MountListHandler(mux, h.List)
 	MountAddHandler(mux, h.Add)
+	MountRemoveHandler(mux, h.Remove)
 }
 
 // MountListHandler configures the mux to serve the "step" service "list"
@@ -160,6 +165,57 @@ func NewAddHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "add")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "step")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
+
+// MountRemoveHandler configures the mux to serve the "step" service "remove"
+// endpoint.
+func MountRemoveHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("DELETE", "/steps", f)
+}
+
+// NewRemoveHandler creates a HTTP handler which loads the HTTP request and
+// calls the "step" service "remove" endpoint.
+func NewRemoveHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeRemoveRequest(mux, decoder)
+		encodeResponse = EncodeRemoveResponse(encoder)
+		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "remove")
 		ctx = context.WithValue(ctx, goa.ServiceKey, "step")
 		payload, err := decodeRequest(r)
 		if err != nil {
